--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Zamokuhle WYP - Contact</title>
+  <title>ZWYP - Contact</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;800&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
   <style>
     :root{
@@ -117,15 +117,15 @@
       <div style="font-weight:600">Zamokuhle</div>
     </div>
     <div class="top-contact">
-      <div><a href="tel:+27838134389">+27 83 813 4389</a></div>
-      <div><a href="mailto:info@zamokulewyp.org">info@zamokulewyp.org</a></div>
+       <div><a href="tel:+27832707073">+27 83 270 7073</a></div>
+      <div><a href="mailto:zamokuhle2004@zwyp.onmicrosoft.com">zamokuhle2004@zwyp.onmicrosoft.com</a></div>
     </div>
     <a class="donate" href="zwyp.png" target="_blank">DONATE NOW</a>
   </div>
 
   <!-- nav -->
   <div class="brandnav">
-    <h1>Zamokuhlewyp</h1>
+    <h1>ZWYP</h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
