--- a/services.html
+++ b/services.html
@@ -139,15 +139,15 @@
       <div style="font-weight:600">Zamokuhle</div>
     </div>
     <div class="top-contact">
-      <div><a href="tel:+27838134389">+27 83 813 4389</a></div>
-      <div><a href="mailto:info@zamokulewyp.org">info@zamokulewyp.org</a></div>
+      <div><a href="tel:+27832707073">+27 83 270 7073</a></div>
+      <div><a href="mailto:zamokuhle2004@zwyp.onmicrosoft.com">zamokuhle2004@zwyp.onmicrosoft.com</a></div>
     </div>
     <a class="donate" href="zwyp.png" target="_blank">DONATE NOW</a>
   </div>
 
   <!-- nav -->
   <div class="brandnav">
-    <h1>Zamokuhlewyp</h1>
+    <h1>ZWYP</h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
