--- a/index.html
+++ b/index.html
@@ -177,7 +177,8 @@
 
   <!-- floating chat + contact -->
   <div class="chat-dot">💬</div>
-  <a class="contact-pill" href="mailto:info@zamokulewyp.org">Contact us</a>
+  <a class="contact-pill" href="mailto:zamokuhle2004@zwyp.onmicrosoft.com">Contact us</a>
+
 
   <!-- footer -->
   <footer>
