--- a/About.html
+++ b/About.html
@@ -3,160 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Zamokuhle WYP - Mockup</title>
+  <title>Zamokuhle WYP - About</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;800&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
-  <style>
-    :root{
-      --teal:#065a83; /* top bar blue */
-      --dark-teal:#0b5a84;
-      --accent:#f5a100; /* donate orange */
-      --nav-height:72px;
-    }
-
-    *{box-sizing:border-box;}
-    body{
-      margin:0;
-      font-family:'Open Sans',system-ui,Arial;
-      color:#fff;
-      background: linear-gradient(180deg, var(--teal), var(--dark-teal));
-    }
-
-    /* Top thin bar with logo/contact/donate */
-    .topbar{
-      display:flex;align-items:center;justify-content:space-between;
-      background:linear-gradient(90deg,var(--teal),#1a6b97 50%);
-      color:#fff;padding:10px 16px;
-    }
-    .topbar .left{display:flex;align-items:center;gap:12px}
-    .logo{width:78px;height:78px;background:#fff;display:flex;align-items:center;justify-content:center;border-radius:4px;padding:6px}
-    .logo img{max-width:100%;max-height:100%}
-    .top-contact{display:flex;align-items:center;gap:18px;font-size:14px}
-    .top-contact a{color:#fff;text-decoration:none;}
-    .donate{background:var(--accent);color:#2b2b2b;padding:14px 30px;border-radius:2px;font-weight:700}
-
-    /* site title + nav */
-    .brandnav{display:flex;align-items:center;justify-content:space-between;padding:18px 36px;background:#fff}
-    .brandnav h1{font-family:'Montserrat';font-weight:700;margin:0;font-size:28px;color:#0b2540}
-    nav ul{display:flex;gap:22px;list-style:none;margin:0;padding:0;align-items:center}
-    nav a{color:#1f4d6f;text-decoration:none;font-weight:600}
-    nav a.active{color:var(--accent)}
-
-    /* hero */
-    .hero{
-      position: relative;
-      height:520px;min-height:420px;
-      display:flex;align-items:center;justify-content:center;
-      text-align:center;
-      padding:0 20px;
-      background-size:cover;
-      background-position:center center;
-      overflow:visible;
-      color:#fff;
-    }
-    .hero::after{
-      content:'';
-      position:absolute;
-      inset:0;
-      background:linear-gradient(180deg,rgba(9,20,37,0.55),rgba(9,20,37,0.75));
-      z-index:1;
-    }
-    .hero-inner{position:relative;z-index:2;max-width:980px}
-    .hero h2{font-family:'Montserrat';font-size:44px;margin:0 0 12px;line-height:1.05}
-    .hero .bigabbr{font-size:56px;font-weight:800;margin-top:6px}
-    .hero p{max-width:760px;margin:18px auto 0;font-size:15px;color:#eaf0f7}
-
-    /* reflection effect */
-    .hero-reflection{
-      position:absolute;
-      bottom:-50%;
-      left:0;
-      width:100%;
-      height:100%;
-      background:inherit;
-      background-size:cover;
-      background-position:center center;
-      transform: scaleY(-1);
-      opacity:0.3;
-      mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
-      -webkit-mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
-      z-index:1;
-    }
-
-    /* sections */
-    main{
-      max-width:800px;
-      margin:0 auto;
-      padding:40px 20px;
-      text-align:center;
-    }
-    main h2{
-      font-size:32px;
-      margin-bottom:12px;
-    }
-    main p{
-      font-size:16px;
-      line-height:1.6;
-      color:#fff;
-    }
-
-    /* floating contact elements */
-    .contact-pill{position:fixed;right:22px;bottom:22px;background:#fff;padding:10px 14px;border-radius:26px;box-shadow:0 6px 22px rgba(8,20,40,0.18);display:flex;align-items:center;gap:10px;color:#0b2540;text-decoration:none;}
-    .chat-dot{position:fixed;left:18px;bottom:18px;background:linear-gradient(180deg,#6f3bd5,#8f5ce4);width:56px;height:56px;border-radius:50%;box-shadow:0 6px 16px rgba(16,24,48,0.2);display:flex;align-items:center;justify-content:center;color:#fff;font-weight:700}
-
-    /* responsive */
-    @media (max-width:820px){
-      .topbar{padding:8px}
-      .brandnav{padding:12px 18px}
-      .hero{height:460px}
-      .hero h2{font-size:32px}
-      .hero .bigabbr{font-size:40px}
-      .top-contact{display:none}
-    }
-    @media (max-width:420px){
-      .hero{height:520px;padding:0 12px}
-      .hero h2{font-size:26px}
-      .hero .bigabbr{font-size:34px}
-      .donate{padding:10px 14px}
-      .logo{width:58px;height:58px}
-    }
-  </style>
-</head>
-<body>
-
-  <!-- top bar -->
-  <div class="topbar">
-    <div class="left">
-      <div class="logo">
-        <img src="logo.jpg" alt="Zamokuhle logo">
-      </div>
-      <div style="font-weight:600">Zamokuhle</div>
-    </div>
-    <div class="top-contact">
-       <div><a href="tel:+27832707073">+27 83 270 7073</a></div>
-      <div><a href="mailto:zamokuhle2004@zwyp.onmicrosoft.com">zamokuhle2004@zwyp.onmicrosoft.com</a></div>
-    </div>
-    <a class="donate" href="zwyp.png" target="_blank">DONATE NOW</a>
-  </div>
-
- <div class="brandnav">
-    <h1>ZWYP</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="About.html" class="active">About</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="programs.html">Programs</a></li>
-      </ul>
-    </nav>
-  </div>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Zamokuhle - Home</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;800&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
-  <style>
+ <style>
     :root{
       --teal:#065a83;
       --dark-teal:#0b5a84;
@@ -170,6 +19,26 @@
       background: linear-gradient(180deg, var(--teal), var(--dark-teal));
     }
 
+    /* Top bar */
+    .topbar{
+      display:flex;align-items:center;justify-content:space-between;
+      background:linear-gradient(90deg,var(--teal),#1a6b97 50%);
+      color:#fff;padding:10px 16px;
+    }
+    .topbar .left{display:flex;align-items:center;gap:12px;}
+    .logo{width:78px;height:78px;background:#fff;display:flex;align-items:center;justify-content:center;border-radius:4px;padding:6px;}
+    .logo img{max-width:100%;max-height:100%;}
+    .top-contact{display:flex;align-items:center;gap:18px;font-size:14px;}
+    .top-contact a{color:#fff;text-decoration:none;}
+    .donate{background:var(--accent);color:#2b2b2b;padding:14px 30px;border-radius:2px;font-weight:700;}
+
+    /* nav */
+    .brandnav{display:flex;align-items:center;justify-content:space-between;padding:18px 36px;background:#fff;}
+    .brandnav h1{font-family:'Montserrat';font-weight:700;margin:0;font-size:28px;color:#0b2540;}
+    nav ul{display:flex;gap:22px;list-style:none;margin:0;padding:0;align-items:center;}
+    nav a{color:#1f4d6f;text-decoration:none;font-weight:600;}
+    nav a.active{color:var(--accent);}
+
     /* hero */
     .hero{
       position: relative;
@@ -177,8 +46,9 @@
       display:flex;align-items:center;justify-content:center;
       text-align:center;
       padding:0 20px;
-      background:linear-gradient(rgba(10,15,44,0.7),rgba(10,15,44,0.7)),
-                 url('https://images.unsplash.com/photo-1529333166437-7750a6dd5a70?auto=format&fit=crop&w=1950&q=80') center/cover no-repeat;
+      background-image:url('example.jpg');
+      background-size:cover;
+      background-position:center center;
       overflow:visible;
     }
     .hero::after{
@@ -210,22 +80,69 @@
     main h2{font-size:32px;margin-bottom:12px;}
     main p{font-size:16px;line-height:1.6;color:#fff;margin-bottom:18px;}
 
+    /* floating chat/contact */
+    .contact-pill{position:fixed;right:22px;bottom:22px;background:#fff;padding:10px 14px;border-radius:26px;color:#0b2540;text-decoration:none;box-shadow:0 6px 22px rgba(8,20,40,0.18);}
+    .chat-dot{position:fixed;left:18px;bottom:18px;background:linear-gradient(180deg,#6f3bd5,#8f5ce4);width:56px;height:56px;border-radius:50%;box-shadow:0 6px 16px rgba(16,24,48,0.2);display:flex;align-items:center;justify-content:center;color:#fff;font-weight:700;}
+
     footer{padding:26px 36px;text-align:center;color:#fff;}
+
+    @media (max-width:820px){
+      .topbar{padding:8px;}
+      .brandnav{padding:12px 18px;}
+      .hero{height:460px;}
+      .hero h2{font-size:32px;}
+      .top-contact{display:none;}
+    }
+    @media (max-width:420px){
+      .hero{height:520px;padding:0 12px;}
+      .hero h2{font-size:26px;}
+      .donate{padding:10px 14px;}
+      .logo{width:58px;height:58px;}
+    }
   </style>
 </head>
 <body>
+
+  <!-- top bar -->
+  <div class="topbar">
+    <div class="left">
+      <div class="logo">
+        <img src="logo.jpg" alt="Zamokuhle logo">
+      </div>
+      <div style="font-weight:600">Zamokuhle</div>
+    </div>
+    <div class="top-contact">
+       <div><a href="tel:+27832707073">+27 83 270 7073</a></div>
+      <div><a href="mailto:zamokuhle2004@zwyp.onmicrosoft.com">zamokuhle2004@zwyp.onmicrosoft.com</a></div>
+    </div>
+    <a class="donate" href="zwyp.png" target="_blank">DONATE NOW</a>
+  </div>
+
+  <!-- nav -->
+ <div class="brandnav">
+    <h1>ZWYP</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="About.html" class="active">About</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="programs.html">Programs</a></li>
+      </ul>
+    </nav>
+  </div>
 
   <!-- hero -->
   <section class="hero">
     <div class="hero-content">
       <h2>Together for a Better Tomorrow</h2>
       <p>Empowering women, youth, and communities since 2004.</p>
-	<a href="contact.html" class="btn">Get Involved</a>
-
+      <a href="contact.html" class="btn">Get Involved</a>
     </div>
     <div class="hero-reflection"></div>
   </section>
 
+  <!-- about -->
   <main>
     <section>
       <h2>About Us</h2>
@@ -235,11 +152,14 @@
     </section>
   </main>
 
+  <!-- floating chat + contact -->
+  <div class="chat-dot">💬</div>
+  <a class="contact-pill" href="mailto:zamokuhle2004@zwyp.onmicrosoft.com">Contact us</a>
+
+  <!-- footer -->
   <footer>
     &copy; 2025 Zamokuhle Women and Youth Projects (ZWYP). All Rights Reserved.
   </footer>
 
 </body>
 </html>
-
-
