--- a/contact.html
+++ b/contact.html
@@ -42,12 +42,13 @@
     /* hero */
     .hero{
       position: relative;
-      height:400px;min-height:300px;
+      height:520px;min-height:420px;
       display:flex;align-items:center;justify-content:center;
       text-align:center;
       padding:0 20px;
-      background:linear-gradient(rgba(10,15,44,0.7),rgba(10,15,44,0.7)),
-                 url('https://images.unsplash.com/photo-1529333166437-7750a6dd5a70?auto=format&fit=crop&w=1950&q=80') center/cover no-repeat;
+      background-image:url('example.jpg'); /* SAME as services page */
+      background-size:cover;
+      background-position:center center;
       overflow:visible;
     }
     .hero::after{
@@ -56,7 +57,7 @@
       z-index:1;
     }
     .hero-content{position:relative;z-index:2;max-width:700px;}
-    .hero h2{font-family:'Montserrat';font-size:36px;margin:0 0 12px;color:#ff99cc;}
+    .hero h2{font-family:'Montserrat';font-size:44px;margin:0 0 12px;color:#ff99cc;}
     .hero p{font-size:18px;margin-bottom:25px;color:#fff;}
     .hero-reflection{
       position:absolute;bottom:-50%;left:0;width:100%;height:100%;
@@ -94,12 +95,12 @@
     @media (max-width:820px){
       .topbar{padding:8px;}
       .brandnav{padding:12px 18px;}
-      .hero{height:360px;}
+      .hero{height:460px;}
       .hero h2{font-size:32px;}
       .top-contact{display:none;}
     }
     @media (max-width:420px){
-      .hero{height:320px;padding:0 12px;}
+      .hero{height:400px;padding:0 12px;}
       .hero h2{font-size:26px;}
       .donate{padding:10px 14px;}
       .logo{width:58px;height:58px;}
@@ -158,10 +159,9 @@
   </section>
 </main>
 
-
   <!-- floating chat + contact -->
-  <div class="chat-dot">💬</div>
-  <a class="contact-pill" href="mailto:info@zamokulewyp.org">Contact us</a>
+    <div class="chat-dot">💬</div>
+  <a class="contact-pill" href="mailto:zamokuhle2004@zwyp.onmicrosoft.com">Contact us</a>
 
   <!-- footer -->
   <footer>
@@ -170,3 +170,4 @@
 
 </body>
 </html>
+
