--- a/programs.html
+++ b/programs.html
@@ -46,8 +46,9 @@
       display:flex;align-items:center;justify-content:center;
       text-align:center;
       padding:0 20px;
-      background:linear-gradient(rgba(10,15,44,0.7),rgba(10,15,44,0.7)),
-                 url('https://images.unsplash.com/photo-1529333166437-7750a6dd5a70?auto=format&fit=crop&w=1950&q=80') center/cover no-repeat;
+      background-image:url('example.jpg'); /* SAME background as services page */
+      background-size:cover;
+      background-position:center center;
       overflow:visible;
     }
     .hero::after{
@@ -56,7 +57,7 @@
       z-index:1;
     }
     .hero-content{position:relative;z-index:2;max-width:700px;}
-    .hero h2{font-family:'Montserrat';font-size:36px;margin:0 0 12px;color:#ff99cc;}
+    .hero h2{font-family:'Montserrat';font-size:44px;margin:0 0 12px;color:#ff99cc;}
     .hero p{font-size:18px;margin-bottom:25px;color:#fff;}
     .btn{
       display:inline-block;background:#ff99cc;color:#0a0f2c;
@@ -158,8 +159,8 @@
   </main>
 
   <!-- floating chat + contact -->
-  <div class="chat-dot">💬</div>
-  <a class="contact-pill" href="mailto:info@zamokulewyp.org">Contact us</a>
+   <div class="chat-dot">💬</div>
+  <a class="contact-pill" href="mailto:zamokuhle2004@zwyp.onmicrosoft.com">Contact us</a>
 
   <!-- footer -->
   <footer>
@@ -168,3 +169,4 @@
 
 </body>
 </html>
+
