--- a/About.html
+++ b/About.html
@@ -207,34 +207,39 @@
           <a href="ayanda-doc.html" target="_blank">
 		<img src="Ayanda.jpg" alt="Ayanda">
 		</a>
-		<h3>Ayanda</h3>
-	<p>Managing Director</p>
+		<h3>Ayanda Dutoit</h3>
+		<p>Managing Director</p>
 
         </div>
 
         <div class="team-member">
           <img src="Lihle.jpg" alt="Lihle">
-          <h3>Lihle</h3>
+          <h3>Lihle Ngidi</h3>
+		  <p>Board member IT</p>
         </div>
 
         <div class="team-member">
           <img src="Lindowe Bongs.jpg" alt="Lindowe Bongs 3">
-          <h3>Lindowe Bongs</h3>
+          <h3>Lindowe Bonga</h3>
+		  <p>Chair person</p>
         </div>
 
         <div class="team-member">
           <img src="Nicolette.jpg" alt="Nicolette">
-          <h3>Nicolette</h3>
+          <h3>Nichollete Aspara</h3>
+		  <p>Deputy Secretary</p>
         </div>
 
         <div class="team-member">
           <img src="Nompumelelo.jpg" alt="Nompumelelo">
-          <h3>Nompumelelo</h3>
+          <h3>Nompumelelo Sithole</h3>
+		  <p>Deputy Treasurer</p>
         </div>
 
         <div class="team-member">
           <img src="Nonkuleko.jpg" alt="Nonkuleko">
-          <h3>Nonkuleko</h3>
+          <h3>Nonkululeko Hadebe</h3>
+		  <p>Deputy Chair</p>
         </div>
         
       </div>
