--- a/About.html
+++ b/About.html
@@ -205,7 +205,7 @@
       
         <div class="team-member">
           <a href="ayanda-doc.html" target="_blank">
-		<img src="Ayanda.jpg" alt="Ayanda">
+		<img src="Ayanda1.jpg" alt="Ayanda">
 		</a>
 		<h3>Ayanda Dutoit</h3>
 		<p>Managing Director</p>
