--- a/ayanda-doc.html
+++ b/ayanda-doc.html
@@ -44,7 +44,7 @@
 </head>
 <body>
   <header>
-    <img src="Ayanda.jpg" alt="Ayanda">
+    <img src="Ayanda1.jpg" alt="Ayanda">
     <h1>Ayanda</h1>
     <p>Managing Director</p>
   </header>
